--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -86,12 +86,12 @@ components:
           type: string
         mapToName:
           type: string
-          description: An object name to map to in the destination.
+          description: An object name to map to.
           example: people
           x-go-type-skip-optional-pointer: true
         mapToDisplayName:
           type: string
-          description: A display name to map to in the destination.
+          description: A display name to map to.
           example: People
           x-go-type-skip-optional-pointer: true
         requiredFields:
@@ -182,12 +182,12 @@ components:
           type: string
         mapToName:
           type: string
-          description: An object name to map to in the destination.
+          description: An object name to map to.
           example: people
           x-go-type-skip-optional-pointer: true
         mapToDisplayName:
           type: string
-          description: A display name to map to in the destination.
+          description: A display name to map to.
           example: People
           x-go-type-skip-optional-pointer: true
         destination:
@@ -244,12 +244,12 @@ components:
           type: string
         mapToName:
           type: string
-          description: The field name to map to in the destination.
+          description: The field name to map to.
           example: account_id
           x-go-type-skip-optional-pointer: true
         mapToDisplayName:
           type: string
-          description: The display name to map to in the destination.
+          description: The display name to map to.
           example: Account ID
           x-go-type-skip-optional-pointer: true
 
@@ -272,7 +272,7 @@ components:
         - $ref: '#/components/schemas/HydratedIntegrationFieldExistent'
         - $ref: '#/components/schemas/IntegrationFieldMapping'
 
-    HydratedIntegrationFieldExistent:
+    FieldMetadata:
       type: object
       required:
         - fieldName
@@ -280,18 +280,71 @@ components:
       properties:
         fieldName:
           type: string
-        mapToName:
-          type: string
-          description: The field name to map to in the destination.
-          example: account_id
-          x-go-type-skip-optional-pointer: true
-        mapToDisplayName:
-          type: string
-          description: The display name to map to in the destination.
+          description: The name of the field from the provider API.
           example: Account ID
-          x-go-type-skip-optional-pointer: true
         displayName:
           type: string
+          description: The display name of the field from the provider API.
+          example: Account ID
+        valueType:
+          type: string
+          description: A normalized field type
+          enum:
+            - string
+            - boolean
+            - singleSelect
+            - multiSelect
+            - date
+            - datetime
+            - int
+            - float
+            - other
+          x-go-type-skip-optional-pointer: true
+        providerType:
+          type: string
+          description: Raw field type from the provider API.
+          example: "timestamp"
+          x-go-type-skip-optional-pointer: true
+        readOnly:
+          type: boolean
+          description: Whether the field is read-only.
+          example: false
+          x-go-type-skip-optional-pointer: true
+        values:
+          type: array
+          description: If the valueType is singleSelect or multiSelect, this is a list of possible values
+          items:
+            $ref: '#/components/schemas/ValueOption'
+
+    ValueOption:
+      type: object
+      description: Represents a field value
+      properties:
+        value:
+          type: string
+          description: The internal value used by the system
+          example: "outbound"
+        displayValue:
+          type: string
+          description: The human-readable display value
+          example: "Outbound Campaign"
+
+    HydratedIntegrationFieldExistent:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/FieldMetadata'
+        - type: object
+          properties:
+            mapToName:
+              type: string
+              description: The field name to map to.
+              example: account_id
+              x-go-type-skip-optional-pointer: true
+            mapToDisplayName:
+              type: string
+              description: The display name to map to.
+              example: Account ID
+              x-go-type-skip-optional-pointer: true
 
     Backfill:
       type: object
