chore: move ObjectMetadata into manifest.yaml

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -651,7 +651,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ObjectMetadata'
+                $ref: '../manifest/manifest.yaml#/components/schemas/ObjectMetadata'
         default:
           description: Error
           content:
@@ -3360,25 +3360,6 @@ components:
               example: builder-id-123
             org:
               $ref: "#/components/schemas/Org"
-    ObjectMetadata:
-      type: object
-      required:
-        - name
-        - fields
-      properties:
-        name:
-          type: string
-          description: Name of the object
-          example: "contact"
-        displayName:
-          type: string
-          description: Human-readable name of the object
-          example: "Contact"
-        fields:
-          type: object
-          description: Map of field metadata keyed by field name
-          additionalProperties:
-            $ref: "#../manifest/manifest.yaml/components/schemas/FieldMetadata"
   securitySchemes:
     APIKeyHeader:
       type: apiKey
