--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1052,6 +1052,7 @@ paths:
       summary: Get object and field data
       description: Retrieves metadata about an object in a customer's SaaS instance, including its fields
       tags: ["Objects & Fields"]
+      operationId: getObjectMetadata
       parameters:
         - name: projectIdOrName
           in: path
