--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1047,50 +1047,50 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
       x-codegen-request-body-name: installationUpdate
-  # /v1/projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}/metadata:
-  #   get:
-  #     summary: Get object and field data
-  #     description: Retrieves metadata about an object in a customer's SaaS instance, including its fields
-  #     tags: ["Objects & Fields"]
-  #     operationId: getObjectMetadata
-  #     parameters:
-  #       - name: projectIdOrName
-  #         in: path
-  #         required: true
-  #         description: Project ID or name
-  #         schema:
-  #           type: string
-  #       - name: integrationId
-  #         in: path
-  #         required: true
-  #         description: Integration ID
-  #         schema:
-  #           type: string
-  #       - name: objectName
-  #         in: path
-  #         required: true
-  #         description: Object name (mapped or unmapped)
-  #         schema:
-  #           type: string
-  #       - name: groupRef
-  #         in: query
-  #         required: false
-  #         description: The groupRef for the installation
-  #         schema:
-  #           type: string
-  #     responses:
-  #       '200':
-  #         description: The retrieved object metadata
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: '#/components/schemas/ObjectMetadata'
-  #       default:
-  #         description: Error
-  #         content:
-  #           application/problem+json:
-  #             schema:
-  #               $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+  /v1/projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}/metadata:
+    get:
+      summary: Get object and field data
+      description: Retrieves metadata about an object in a customer's SaaS instance, including its fields
+      tags: ["Objects & Fields"]
+      operationId: getObjectMetadata
+      parameters:
+        - name: projectIdOrName
+          in: path
+          required: true
+          description: Project ID or name
+          schema:
+            type: string
+        - name: integrationId
+          in: path
+          required: true
+          description: Integration ID
+          schema:
+            type: string
+        - name: objectName
+          in: path
+          required: true
+          description: Object name (mapped or unmapped)
+          schema:
+            type: string
+        - name: groupRef
+          in: query
+          required: false
+          description: The groupRef for the installation
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The retrieved object metadata
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ObjectMetadata'
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/integrations/{integrationId}/installations/{installationId}/operations:
     get:
       summary: List operations
