--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -105,7 +105,18 @@ components:
         subscribeEventType:
           description: The type of event that triggered the message.
           type: string
-          enum: [create, update, updateAssociation, delete, other]
+          enum:
+            - create
+            - update
+            - updateAssociation
+            - delete
+            - other
+          x-enumNames:
+            - CreateEvent
+            - UpdateEvent
+            - UpdateAssociationEvent
+            - DeleteEvent
+            - OtherEvent
         providerEventType:
           description: The type of event that triggered the message, as defined by the SaaS provider.
           type: string
