Rename to allFieldsMetadata

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -209,7 +209,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/HydratedIntegrationField'
-        allFieldsMetadataMap:
+        allFieldsMetadata:
           description: This is a map of all fields on the object including their metadata (such as display name and type), the keys of the map are the field names.
           type: object
           additionalProperties:
