--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1047,7 +1047,7 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
       x-codegen-request-body-name: installationUpdate
-  /v1/projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}/metadata:
+  /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}/metadata:
     get:
       summary: Get object and field data
       description: Retrieves metadata about an object in a customer's SaaS instance, including its fields
