--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1883,9 +1883,11 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/destinations/{destination}:
+  /projects/{projectIdOrName}/destinations/{destination}:
     get:
       summary: Get a destination
       operationId: getDestination
+      tags: [ "Destination" ]
       tags: [ "Destination" ]
       parameters:
         - name: projectIdOrName
