--- a/api/write.yaml
+++ b/api/write.yaml
@@ -73,7 +73,7 @@ components:
             during installation creation.
         type:
           type: string
-          description: 
+          description:
             The type of write operation. The only supported types currently are create and update.
           enum: [create, update]
           example: create
@@ -92,6 +92,8 @@ components:
             }
         associations:
           type: array
+          items:
+            type: object
           description: "To write associations to the record. Note: currently only HubSpot associations are supported"
           example:
             [
