--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1049,10 +1049,13 @@ paths:
       x-codegen-request-body-name: installationUpdate
   /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}/metadata:
     get:
-      summary: Get object and field data
-      description: Retrieves metadata about an object in a customer's SaaS instance, including its fields
+      summary: Get object metadata for installation
+      description: |
+        Retrieves metadata about an object in a customer's SaaS instance, including its fields.
+        This endpoint requires that an Installation exists for the given groupRef.
+        It applies object mappings.
       tags: ["Objects & Fields"]
-      operationId: getObjectMetadata
+      operationId: getObjectMetadataForInstallation
       parameters:
         - name: projectIdOrName
           in: path
@@ -1076,6 +1079,53 @@ paths:
           in: query
           required: false
           description: The groupRef for the installation
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The retrieved object metadata
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ObjectMetadata'
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+  /projects/{projectIdOrName}/providers/{provider}/objects/{objectName}/metadata:
+    get:
+      summary: Get object metadata for connection
+      description: |
+        Retrieves metadata about an object in a customer's SaaS instance, including its fields.
+        This endpoint only requires that a Connection exists for the given groupRef.
+        It does not apply any object mappings.
+      tags: ["Objects & Fields"]
+      operationId: getObjectMetadataForConnection
+      parameters:
+        - name: projectIdOrName
+          in: path
+          required: true
+          description: Project ID or name
+          schema:
+            type: string
+        - name: provider
+          in: path
+          required: true
+          description: The API Provider
+          schema:
+            type: string
+        - name: objectName
+          in: path
+          required: true
+          description: Object name (mapped or unmapped)
+          schema:
+            type: string
+        - name: groupRef
+          in: query
+          required: false
+          description: The groupRef for the connection
           schema:
             type: string
       responses:
