provider info schema

--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -46,6 +46,9 @@ components:
           type: boolean
         write:
           type: boolean
+        SubscribeConfig:
+          $ref: '#/components/schemas/SubscribeConfig'
+
     BulkWriteSupport:
       type: object
       x-oapi-codegen-extra-tags:
@@ -339,3 +342,34 @@ components:
       type: object
       additionalProperties:
         $ref: '#/components/schemas/ProviderInfo'
+
+    SubscribeConfig:
+      type: object
+      required:
+        - subscriptionScope
+        - targetURLScope
+        - registrationTiming
+      properties:
+        subscriptionScope:
+          type: string
+          enum: [integragion, installation]
+          description: The scope of the subscription.
+        targetURLScope:
+          enum: [integragion, installation]
+          description: The scope of the target URL.
+        registrationTiming:
+          type: string
+          enum: [providerApp, integration, installation]
+          description: The timing of the registration.
+
+    SubscribeSupport:
+      type: object
+      properties:
+        create:
+          type: boolean
+        update:
+          type: boolean
+        delete:
+          type: boolean
+        passThrough:
+          type: boolean
