[ENG-1774] chore: ignore methods from sdk (#114)
* ignore org, ba & invite methods

* update directive

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1338,6 +1338,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/api-keys:
     get:
+      x-speakeasy-ignore: true
       summary: List API keys
       operationId: listApiKeys
       tags: ["API Key"]
@@ -1374,6 +1375,7 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
     post:
+      x-speakeasy-ignore: true
       summary: Create a new API key
       operationId: createApiKey
       tags: ["API Key"]
@@ -1411,6 +1413,7 @@ paths:
       x-codegen-request-body-name: apiKey
   /projects/{projectIdOrName}/api-keys/{apiKey}:
     get:
+      x-speakeasy-ignore: true
       summary: Get an API key
       operationId: getApiKey
       tags: ["API Key"]
@@ -1445,6 +1448,7 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
     delete:
+      x-speakeasy-ignore: true
       summary: Delete an API key
       operationId: deleteApiKey
       tags: ["API Key"]
@@ -1469,6 +1473,7 @@ paths:
         204:
           description: Deleted
     patch:
+      x-speakeasy-ignore: true
       summary: Update an API key
       operationId: updateApiKey
       tags: ["API Key"]
@@ -2123,6 +2128,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /orgs:
     post:
+      x-speakeasy-ignore: true
       summary: Create a new organization
       operationId: createOrg
       tags: ["Org"]
@@ -2155,6 +2161,7 @@ paths:
       x-codegen-request-body-name: org
   /orgs/{orgId}:
     get:
+      x-speakeasy-ignore: true
       summary: Get an organization
       operationId: getOrg
       tags: ["Org"]
@@ -2184,6 +2191,7 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
     patch:
+      x-speakeasy-ignore: true
       summary: Update an organization
       operationId: updateOrg
       tags: ["Org"]
@@ -2239,6 +2247,7 @@ paths:
         x-codegen-request-body-name: orgUpdate
   /orgs/{orgId}/builders:
     get:
+      x-speakeasy-ignore: true
       summary: List builders for an organization
       operationId: listOrgBuilders
       tags: ["Org"]
@@ -2265,6 +2274,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /orgs/{orgId}/invites:
     post:
+      x-speakeasy-ignore: true
       summary: Invite a user to an organization
       operationId: createOrgInvite
       tags: ["Org"]
@@ -2307,6 +2317,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
         x-codegen-request-body-name: invite
     get:
+      x-speakeasy-ignore: true
       summary: List invites for an organization
       operationId: listOrgInvites
       tags: ["Org"]
@@ -2333,6 +2344,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /orgs/{orgId}/invites/{inviteId}:
     get:
+      x-speakeasy-ignore: true
       summary: Get an invite
       operationId: getOrgInvite
       tags: ["Org"]
@@ -2361,6 +2373,7 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
     delete:
+      x-speakeasy-ignore: true
       summary: Revoke an invite
       operationId: deleteOrgInvite
       tags: ["Org"]
@@ -2392,6 +2405,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /my-info:
     get:
+      x-speakeasy-ignore: true
       summary: Get information about the current user
       operationId: getMyInfo
       tags: ["User"]
@@ -2411,6 +2425,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /invites:accept:
     post:
+      x-speakeasy-ignore: true
       summary: Accept an invite
       operationId: acceptInvite
       tags: ["User"]
@@ -2442,6 +2457,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /orgs/{orgId}/billingAccount:
     get:
+      x-speakeasy-ignore: true
       summary: Get the billing account for an organization
       operationId: getOrgBillingAccount
       tags: ["Billing Account"]
@@ -2472,6 +2488,7 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /billingAccounts/{billingAccountId}/portalSession:
     post:
+      x-speakeasy-ignore: true
       summary: Create a portal session for a billing account
       operationId: createBillingAccountSession
       tags: ["Billing Account"]
