--- a/api/write.yaml
+++ b/api/write.yaml
@@ -28,6 +28,7 @@ paths:
             type: string
       requestBody:
         description: Write request
+        required: true
         content:
           application/json:
             schema:
