--- a/api/read.yaml
+++ b/api/read.yaml
@@ -30,6 +30,7 @@ paths:
             type: string
       requestBody:
         description: Read Request
+        required: true
         content:
           application/json:
             schema:
@@ -86,6 +87,7 @@ paths:
             type: string
       requestBody:
         description: ResultDeliveryRequestBody
+        required: true
         content:
           application/json:
             schema:
