--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1587,6 +1587,7 @@ paths:
           schema:
             type: string
       requestBody:
+        required: true
         content:
           application/json:
             schema:
