--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1079,7 +1079,7 @@ paths:
             type: string
         - name: groupRef
           in: query
-          required: false
+          required: true
           description: The groupRef for the installation
           schema:
             type: string
